Huuhdiin tomgloog gesen neriig Update hiiv index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="mn">
 <head>
     <meta charset="UTF-8">
-    <title>Хүүхдийн Тоглоом</title>
+    <title>5 Тоглоом</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
